# Py-100-Days-of-Learning

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  build-src-structure.py  hello.py  pyproject.toml
.github/workflows/: python-app.yml  python-lint.yml
src/day003/: README.md  day003-3.py  day003-4.py  day003-5.py  day003-project.py
src/day004/: README.md  day004-1.py  day004-2.py  day004-3.py  day004-project.py
src/day005/: README.md  day005-01.py  day005-02.py  day005-03.py  day005-project.py
src/day006/: README.md
src/day007/: Hangman Flow.drawio  README.md  day007-01.py  day007-02.py  day007-03.py  day007-04.py  day007-05.py  hangman_art.py
src/day008/: README.md  day08-task1.py  day08-task2.py  day08-task3.py  day08-task86.py  day08-task87.py  day08-task88.py  day08-task89.py
src/day009/: README.md  day009-code-ex09.py  day009-task70.py  day009-task93.py  day009-task95.py  day009-task97.py
src/day010/: README.md  day010-coding exercise 10.py  day010-coding10.py  day010-task073.py  day010-task074.py  day010-task075.py  day010-task076.py  day010-task101.py  day010-task102.py  day010-task105.py  day010-task107.py
src/day011/: README.md  day011-rules.py  day011-solution.py  day011-task110.py  day011-task115.py
src/day012/: README.md  art.py  day012-120.py  day012-122.py  day012-coding11.py
src/day013/: README.md  day013-124.py
src/day024/: README.md
src/day073/: README.md
