[project]
name = "py-100-days-of-learning"
version = "0.1.0"
description = "100 days of learning Python"
authors = [
	{ name = "Nicholas Lawrence", email = "nlawren@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit>=4.0.1",
    "rich>=13.9.4",
    "ruff>=0.7.4",
]
